# ports

./: .gitignore  .markdownlint.json  LICENSE.txt  PortIndex  PortIndex.quick  README.md  dir2xinstall.py  gen-from-dmg.py  package.json  pyproject.toml
.cursor/commands/: commit.md  patch.md  test.md  update.md
.cursor/rules/: general.mdc
.github/workflows/: qa.yml
aqua/AuRevoir/: Portfile
aqua/Bartender/: Portfile
aqua/DHS/: Portfile
aqua/EnvPane/: Portfile
aqua/Fanny/: Portfile
aqua/Flycut/: Portfile
aqua/KnockKnock/: Portfile
aqua/MenuMeters/: Portfile
aqua/NoSleep/: Portfile
aqua/NoSleep-kext/: Portfile
aqua/QuickRes/: Portfile
aqua/SwiftDefaultApps/: Portfile
aqua/UIBrowser/: Portfile
aqua/altserver/: Portfile
aqua/blurred/: Portfile
aqua/cydia-impactor/: Portfile
aqua/dockutil/: Portfile
aqua/eul/: Portfile
aqua/flux/: Portfile
aqua/macOCR/: Portfile
aqua/munki/: Portfile
aqua/munki-managed-software-center/: Portfile
aqua/munki-notifier/: Portfile
aqua/munki-status/: Portfile
aqua/overkill/: Portfile
aqua/qtfm/: Portfile
aqua/shifty/: Portfile
aqua/sideloadly/: Portfile
aqua/tunnelblick/: Portfile
audio/bpmdetect/: Portfile
databases/dbeaver-creds/: Portfile
databases/litecli/: Portfile
databases/pgcli/: Portfile
devel/010-editor/: Portfile
devel/Commandant/: Portfile
devel/Curry/: Portfile
devel/HotKey/: Portfile
devel/LaunchAtLogin/: Portfile
devel/Localize-Swift/: Portfile
devel/Nimble/: Portfile
devel/PrettyColors/: Portfile
devel/Quick/: Portfile
devel/ReactiveSwift/: Portfile
devel/Repeat/: Portfile
devel/Result/: Portfile
devel/Sparkle/: Portfile
devel/SwiftyJSON/: Portfile
devel/SystemKit/: Portfile
devel/Tentacle/: Portfile
devel/bincookie/: Portfile
devel/class-dump/: Portfile
devel/cleaner-for-xcode/: Portfile
devel/cmake-format/: Portfile
devel/cutter/: Portfile
devel/cz-path/: Portfile
devel/docker-ctl/: Portfile
devel/dyld-shared-cache-extractor/: Portfile
devel/git-radar/: Portfile
devel/git-secrets/: Portfile
devel/git-up/: Portfile
devel/hubflow/: Portfile
devel/hubflow-completion/: Portfile
devel/icu63/: Portfile
devel/jtool/: Portfile
devel/ktool/: Portfile
devel/lci/: Portfile
devel/libbinarycookies/: Portfile
devel/libfragmentzip/: Portfile
devel/libgeneral/: Portfile
devel/libinotify-kqueue/: Portfile
devel/libirecovery/: Portfile
devel/openrct2-icu/: Portfile
devel/pyproject2setuppy/: Portfile
devel/qhexedit2/: Portfile
devel/shflags/: Portfile
devel/swift-argument-parser/: Portfile
devel/swift-llbuild/: Portfile
devel/swiftformat/: Portfile
devel/trytravis/: Portfile
devel/vscode/: Portfile
devel/wakatime/: Portfile
devel/wakatime-cli/: Portfile
devel/wxhexeditor/: Portfile
devel/ycmd/: Portfile
devel/youcompleteme/: Portfile
emulators/containerd/: Portfile
emulators/docker/: Portfile
emulators/docker-ce/: Portfile
emulators/docker-desktop/: Portfile
emulators/docker-proxy/: Portfile
emulators/melonds/: Portfile
emulators/retroarch/: Portfile
fonts/iosevka/: Portfile
fonts/noto/: Portfile
fonts/roboto/: Portfile
games/cen64/: Portfile
games/cen64-qt/: Portfile
games/melonds/: Portfile
games/openrct2/: Portfile
games/outfox/: Portfile
games/re3/: Portfile
games/re3-installer/: Portfile
games/retroarch/: Portfile
games/stepmania-outfox/: Portfile
(+213 files in other folders)
